microbenchmark test was added, id generating was swithced to atomicInteger